# meep-research-mcp

./: .gitignore  GOOGLE_SETUP.md  README.md  __init__.py  __main__.py  claude-launcher.sh  config.json.example  config.py  google_search.py  pyproject.toml  requirements.txt  run.sh  search_strategies.py  server.py  setup.sh
